<?xml version="1.0"?>
<package format="2">
  <name>task_planning</name>
  <version>0.0.0</version>
  <description>Provides Goal Oriented Action Planning (GOAP) library</description>

  <maintainer email="blakeanderson@utexas.edu">Blake Anderson</maintainer>
  <license>LANS</license>
  <author email="blakeanderson@utexas.edu">Blake Anderson</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>roslib</depend>

</package>
